// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-beyTiQ sc-guDMob dFRMQp cAvGCa"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-beyTiQ sc-guDMob heAGpe cAvGCa"
>
  foo
</button>
`;
